--- a/input.css
+++ b/input.css
@@ -1,3 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+    @tailwind base;
+    @tailwind components;
+    .number {
+        @apply w-20 h-16 rounded-full bg-neutral-700;
+    }
+    
+    .operator {
+        @apply w-20 h-16 rounded-full bg-yellow-300;
+    }
+    
+    @tailwind utilities;
